# Rule-Based_Chess_Engine_-Cpp-OpenCV-

./: README.md
Rule-Based_Chess_Engine/chess_project/: CMakeLists.txt
Rule-Based_Chess_Engine/chess_project/src/: main.cpp  test.cpp  test1.cpp
